[gd_scene load_steps=13 format=3 uid="uid://3k3sqnneywit"]

[ext_resource type="Script" path="res://src/tile.gd" id="1_v6842"]
[ext_resource type="Texture2D" uid="uid://n0mnqvgc7mha" path="res://data/materials/runes/rune_1_diff.png" id="2_6dm4a"]
[ext_resource type="Texture2D" uid="uid://m0ba3ebpohoc" path="res://data/materials/runes/rune_1_nor.png" id="3_duc34"]
[ext_resource type="Texture2D" uid="uid://dwa0jxm0btd1n" path="res://data/materials/runes/rune_2_diff.png" id="4_2x48q"]
[ext_resource type="Texture2D" uid="uid://b3m1s3va18nof" path="res://data/materials/runes/rune_2_norm.png" id="5_7i75d"]
[ext_resource type="Texture2D" uid="uid://4mp614i81xr5" path="res://data/materials/runes/rune_3_diff.png" id="6_x0vae"]
[ext_resource type="Texture2D" uid="uid://ch4x2rxlb0ec0" path="res://data/materials/runes/rune_3_norm.png" id="7_q717j"]
[ext_resource type="AudioStream" uid="uid://8jf2cpja15b5" path="res://data/audio/cleanse_tile.ogg" id="8_u743d"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1l1c1"]

[sub_resource type="Animation" id="Animation_fqlvq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:emission_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7y81x"]
resource_name = "pulse"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:emission_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 4.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Rune2:emission_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 4.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Rune3:emission_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 4.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Rune4:emission_energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 4.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Rune5:emission_energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 4.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Rune6:emission_energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 4.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Rune7:emission_energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 4.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s0qxt"]
_data = {
"RESET": SubResource("Animation_fqlvq"),
"pulse": SubResource("Animation_7y81x")
}

[node name="Tile" type="Area3D"]
script = ExtResource("1_v6842")
fog_dark = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1l1c1")

[node name="RuneDecals" type="Node3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="RuneDecals"]
root_node = NodePath("../Rune1")
libraries = {
"": SubResource("AnimationLibrary_s0qxt")
}

[node name="Rune1" type="Decal" parent="RuneDecals"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0571289, 0)
visible = false
sorting_offset = 10.0
texture_albedo = ExtResource("2_6dm4a")
texture_normal = ExtResource("3_duc34")
texture_emission = ExtResource("2_6dm4a")
emission_energy = 0.0
upper_fade = 0.00502394
lower_fade = 0.00269226
cull_mask = 258

[node name="Rune2" type="Decal" parent="RuneDecals"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0571289, 0)
visible = false
texture_albedo = ExtResource("4_2x48q")
texture_normal = ExtResource("5_7i75d")
texture_emission = ExtResource("4_2x48q")
emission_energy = 3.86667
cull_mask = 258

[node name="Rune3" type="Decal" parent="RuneDecals"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0571289, 0)
visible = false
texture_albedo = ExtResource("6_x0vae")
texture_normal = ExtResource("7_q717j")
texture_emission = ExtResource("6_x0vae")
emission_energy = 3.86667
cull_mask = 258

[node name="Rune4" type="Decal" parent="RuneDecals"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0571289, 0)
visible = false
texture_albedo = ExtResource("2_6dm4a")
texture_normal = ExtResource("3_duc34")
texture_emission = ExtResource("2_6dm4a")
emission_energy = 3.86667
cull_mask = 258

[node name="Rune5" type="Decal" parent="RuneDecals"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0571289, 0)
visible = false
texture_albedo = ExtResource("2_6dm4a")
texture_normal = ExtResource("3_duc34")
texture_emission = ExtResource("2_6dm4a")
emission_energy = 3.86667
cull_mask = 258

[node name="Rune6" type="Decal" parent="RuneDecals"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0571289, 0)
visible = false
texture_albedo = ExtResource("2_6dm4a")
texture_normal = ExtResource("3_duc34")
texture_emission = ExtResource("2_6dm4a")
emission_energy = 3.86667
cull_mask = 258

[node name="Rune7" type="Decal" parent="RuneDecals"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0571289, 0)
visible = false
texture_albedo = ExtResource("2_6dm4a")
texture_normal = ExtResource("3_duc34")
texture_emission = ExtResource("2_6dm4a")
emission_energy = 3.86667
cull_mask = 258

[node name="Rune8" type="Decal" parent="RuneDecals"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0571289, 0)
visible = false
texture_albedo = ExtResource("2_6dm4a")
texture_normal = ExtResource("3_duc34")
texture_emission = ExtResource("2_6dm4a")
emission_energy = 3.86667
cull_mask = 258

[node name="Timer" type="Timer" parent="RuneDecals"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Audio" type="Node" parent="."]

[node name="Cleanse" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("8_u743d")
volume_db = 4.0
max_db = 4.0
bus = &"Effects"

[connection signal="input_event" from="." to="." method="mouse_input"]
[connection signal="timeout" from="RuneDecals/Timer" to="RuneDecals/AnimationPlayer" method="play" binds= ["pulse"]]
